test/tests/operators/discard/after_sink.txt
error: operator does not accept void
 --> tests/operators/discard/after_sink.tql:5:1
  |
5 | discard | discard
  | ^^^^^^^ 
  |
  = docs: https://docs.tenzir.com/reference/operators/discard
